Created registration page.

--- a/SavimbiCasino.WebApi/ClientApp/src/Register/style.css
+++ b/SavimbiCasino.WebApi/ClientApp/src/Register/style.css
@@ -1,8 +1,8 @@
-.LoginArea {
+.RegisterArea {
     max-width: 360px;
     margin: 10vh auto 0 auto;
 }
 
-.LoginTitle {
+.RegisterTitle {
     margin-bottom: 20px;
 }
