--- a/SavimbiCasino.WebApi/ClientApp/src/RegistrationCompleted/style.css
+++ b/SavimbiCasino.WebApi/ClientApp/src/RegistrationCompleted/style.css
@@ -1,8 +1,8 @@
-.LoginArea {
+.CompletedArea {
     max-width: 360px;
     margin: 10vh auto 0 auto;
 }
 
-.LoginTitle {
+.CompletedTitle {
     margin-bottom: 20px;
 }
