Completed first release.

--- a/SavimbiCasino.WebApi/ClientApp/src/ChipContainer/style.css
+++ b/SavimbiCasino.WebApi/ClientApp/src/ChipContainer/style.css
@@ -9,3 +9,11 @@
 .Chips .ChipContainer:last-child {
     margin-right: 0;
 }
+
+.ChipsVertical > * {
+    display: block !important;
+}
+
+.ChipsVertical > * > *:first-child {
+    margin-top: -3px !important
+}
