--- a/SavimbiCasino.WebApi/ClientApp/src/Dealer/style.css
+++ b/SavimbiCasino.WebApi/ClientApp/src/Dealer/style.css
@@ -10,22 +10,58 @@
     color: #fff;
 }
 
-.Container {
-    margin: 0 auto;
-    bottom: 20px;
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    width: calc(100% - 20px);
-    display: block;
-}
-
 .Players {
     display: flex;
-    justify-content: space-evenly;
     flex-direction: row-reverse;
 }
 
 .Players Player:last-child {
     margin: 0;
+}
+
+.Players > * {
+    position: fixed;
+}
+
+.Players > *:first-child {
+    right: 10vw;
+    top: 48vh;
+    transform: rotate(-65deg);
+}
+
+.Players > *:nth-child(2) {
+    right: 17vw;
+    top: 68vh;
+    transform: rotate(-45deg);
+}
+
+.Players > *:nth-child(3) {
+    right: 28vw;
+    top: 84vh;
+    transform: rotate(-30deg);
+}
+
+.Players > *:nth-child(4) {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 90vh;
+}
+
+.Players > *:nth-child(5) {
+    left: 28vw;
+    top: 84vh;
+    transform: rotate(30deg);
+}
+
+.Players > *:nth-child(6) {
+    left: 17vw;
+    top: 68vh;
+    transform: rotate(45deg);
+}
+
+.Players > *:last-child {
+    left: 10vw;
+    top: 48vh;
+    transform: rotate(65deg);
 }
